added arrows for gallary

--- a/index.html
+++ b/index.html
@@ -44,18 +44,22 @@
  <div class="heart" >
         <img class="heart-adjust" src="images/blue-heart.png" alt="a blue heart image"/>
         </div>
+
+        <div class="arrow-left"></div>
+
 <section class="boxes">
  <div class="test-1">
     <div class="one"></div>
     <div class="two"></div>
 </div>
+
 <div class="test-2">
     <div class="three"></div>
     <div class="four"></div>
 </div>
 </section>
 
-
+<div class="arrow-right"></div>
       
 
         <div class="yellow-flower">
