lines added and adjusting in progress

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <img class="heart-adjust" src="images/blue-heart.png" alt="a blue heart image"/>
         </div>
 
+        <div class="adjust-lines">
+        <img class="lines" src="images/lines.png" alt="lines dont worry about it"/>
+        </div>
+
         <div class="arrow-left"></div>
 
 <section class="boxes">
